# transparency-logging

./: .gitignore  README.md  deployment.yaml  discovered_compliance_checked.bpmn  norm_coloured_without_discovered2.bpmn  norm_compliance_checked.bpmn  notes.md  requirements.txt  schema.json  skaffold.yaml  test.md  test_coloured_without_unused2.bpmn  tilt-enhanced-event-log.csv
devopsguyfluentd/: 2-ns.yaml  3-fluentd-configmap.yaml  5-fluentd.yaml  6-elastic-demo.yaml  counter.yaml
img/: diagram_1.bpmn
logging-manifests/: 01-elastic.yaml  02-kibana.yaml  03-fluentd-configmap.yaml  04-fluentd-daemonset-elasticsearch-rbac.yaml
logging-stack/: elastic.yaml
manifests/: jaeger-all-in-one.yaml  otel-collector.yaml
otel-manifests/: otel-collector.yaml
process_tilt_package/: README.md  pyproject.toml  requirements.txt
process_tilt_package/src/process_tilt_ciphersmaug/: logging.py
process_tilt_package/src/process_tilt_ciphersmaug.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/address/: Dockerfile
src/frontend/: Containerfile  Dockerfile  docker-build.sh  requirements.txt
src/loadgenerator/: Dockerfile  locust.conf  locustfile.py  requirements.txt
src/mining/: data-retrieval.ipynb  main.ipynb  modified.bpmn  modified2.bpmn  modified4.bpmn  modified5.bpmn  norm_coloured_without_discovered.bpmn  normative_modified.bpmn  normative_modified2.bpmn  ocel.json  output.bpmn  output2.bpmn  process-discovery.ipynb  (+7 more)
src/mining-dashboard/: Dockerfile  requirements.txt
transparency-manifests/: 1-ns.yaml  3-fluentd-configmap.yaml  kibana-demo.yaml  test.md  tst.md
(+40 files in other folders)
